--- a/public/404.html
+++ b/public/404.html
@@ -10,12 +10,12 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://blog.jiang.news/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.56857918c5a7a024945e2862ff989ccd629a43ef7d5a0c503fd8273e15d66d93.css" integrity="sha256-VoV5GMWnoCSUXihi/5iczWKaQ&#43;99WgxQP9gnPhXWbZM=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://baidu.com/XIAOZHOU/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://baidu.com/XIAOZHOU/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://blog.jiang.news/XIAOZHOU/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://blog.jiang.news/XIAOZHOU/apple-touch-icon.png">
-<link rel="mask-icon" href="https://blog.jiang.news/XIAOZHOU/safari-pinned-tab.svg">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.b443e620c0f8b0852ed4269975d7bc8e5f21d81f912492e689584d19af3ab01d.css" integrity="sha256-tEPmIMD4sIUu1CaZdde8jl8h2B&#43;RJJLmiVhNGa86sB0=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://baidu.com/XIAOZHOU/xiaozhou-1c/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://baidu.com/XIAOZHOU/xiaozhou-1c/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://blog.jiang.news/XIAOZHOU/xiaozhou-1c/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://blog.jiang.news/XIAOZHOU/xiaozhou-1c/apple-touch-icon.png">
+<link rel="mask-icon" href="https://blog.jiang.news/XIAOZHOU/xiaozhou-1c/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -37,10 +37,10 @@
 
 </head>
 
-<body class="list dark" id="top">
+<body class="list" id="top">
 <script>
-    if (localStorage.getItem("pref-theme") === "light") {
-        document.body.classList.remove('dark')
+    if (localStorage.getItem("pref-theme") === "dark") {
+        document.body.classList.add('dark');
     }
 
 </script>
@@ -49,7 +49,7 @@
     <nav class="nav">
         <div class="logo">
             <a href="https://blog.jiang.news/" accesskey="h" title="Jiang.news (Alt + H)">
-                <img src="https://blog.jiang.news/XIAOZHOU/xiaozhou-1s.png" alt="" aria-label="logo"
+                <img src="https://blog.jiang.news/XIAOZHOU/xiaozhou-1c/xiaozhou.png" alt="" aria-label="logo"
                     height="30">Jiang.news</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -81,13 +81,13 @@
                 </a>
             </li>
             <li>
-                <a href="https://blog.jiang.news/categories/" title="Categories">
-                    <span>Categories</span>
+                <a href="https://blog.jiang.news/categories/" title="&lt;Categories&gt;">
+                    <span>&lt;Categories&gt;</span>
                 </a>
             </li>
             <li>
-                <a href="https://blog.jiang.news/tags/" title="Tags">
-                    <span>Tags</span>
+                <a href="https://blog.jiang.news/tags/" title="#Tags">
+                    <span>#Tags</span>
                 </a>
             </li>
             <li>
@@ -106,13 +106,12 @@
     <span>&copy; 2022 <a href="https://blog.jiang.news/">Jiang.news</a></span>
     <span>
         Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">ME</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">U</a> &
+        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">ME</a>
     </span>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" fill="currentColor">
-        
         <g transform=" scale(0.5) translate(0, 5) ">
         <path d="
           m18.68,1.0
